--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -1,11 +1,9 @@
 <div class="course-card">
   <!-- <div class="course-title">Angular Core Deep Dive</div> -->
-  <div class="course-title">{{ index }} {{ course.description }}</div>
+  <div class="course-title">{{ cardIndex + " " + course.description }}</div>
   <img width="300" alt="Angular Logo" [src]="course.iconUrl" />
 
   <div class="course-description">
-    <!-- A detailed walk-through of the most important part of Angular - the Core and
-    Common modules. -->
     {{ course.longDescription }}
   </div>
 
