--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,23 @@
   <h1>{{ header }}</h1>
 
   <div class="courses">
-    <stb-course-card *ngFor=" let course of courses; index as i; first as
-    isFirst; last as isLast; even as isEven; odd as isOdd "
-    (courseSelected)="onCourseSelected($event)" [course]="course" [cardIndex]="i
-    + 1" [class.is-first]="isFirst" [class.is-last]="isLast"
-    [class.is-even]="isEven [class.is-odd]="isOdd" />
+    <stb-course-card
+      *ngFor="
+        let course of courses;
+        let index = index;
+        let isFirst = first;
+        let isLast = last;
+        even as isEven;
+        odd as isOdd
+      "
+      (courseSelected)="onCourseSelected($event)"
+      [course]="course"
+      [cardIndex]="index + 1"
+      [class.is-first]="isFirst"
+      [class.is-last]="isLast"
+      [class.is-even]="isEven"
+      [class.is-odd]="isOdd"
+    />
   </div>
 </main>
 
