--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -1,7 +1,16 @@
-<div class="course-card">
-  <!-- <div class="course-title">Angular Core Deep Dive</div> -->
+<div class="course-card" *ngIf="course">
   <div class="course-title">{{ cardIndex + " " + course.description }}</div>
-  <img width="300" alt="Angular Logo" [src]="course.iconUrl" />
+
+  <img
+    width="300"
+    alt="Angular Logo"
+    *ngIf="isImageVisible(); else noImage"
+    [src]="course.iconUrl"
+  />
+
+  <ng-template #noImage>
+    <p>No image is found</p>
+  </ng-template>
 
   <div class="course-description">
     {{ course.longDescription }}
