--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -1,12 +1,22 @@
-<div class="course-card" *ngIf="course" [ngClass]="cardClasses()">
-  <div class="course-title">{{ cardIndex + " " + course.description }}</div>
+<div
+  class="course-card"
+  *ngIf="course"
+  [ngClass]="cardClasses()"
+  [ngStyle]="cardStyles()"
+>
+  <div
+    class="course-title"
+    [ngStyle]="{ 'text-decoration': 'underline', color: 'yellow' }"
+  >
+    {{ cardIndex + " " + course.description }}
+  </div>
 
-  <img
+  <!-- <img
     width="300"
     alt="Angular Logo"
     *ngIf="isImageVisible(); else noImage"
     [src]="course.iconUrl"
-  />
+  /> -->
 
   <ng-template #noImage>
     <p>No image is found</p>
