--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -26,5 +26,17 @@
     {{ course.longDescription }}
   </div>
 
+  <ng-container [ngSwitch]="course.category">
+    <div class="course-category">
+      <ng-container *ngSwitchCase="'BEGINNER'">
+        <div class="category">Beginner</div>
+      </ng-container>
+
+      <div class="category" *ngSwitchCase="'INTERMEDIATE'">Intermediate</div>
+      <div class="category" *ngSwitchCase="'ADVANCED'">Advanced</div>
+      <div class="category" *ngSwitchDefault>All Levels</div>
+    </div>
+  </ng-container>
+
   <button (click)="onCourseViewed()">View Course</button>
 </div>
